--- a/app/assets/stylesheets/modules/phone.css.scss
+++ b/app/assets/stylesheets/modules/phone.css.scss
@@ -3,8 +3,37 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-@media only screen and (min-width: 768px) {
+/* Web Fonts @import */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800);
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
 
 
-
+footer {
+  margin-top: 2em;
+  padding:20px 0;
+  color: white;
+  background:rgb(46,54,57);
 }
+
+
+img[rel="logo"] {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  height: 100%;
+  width:10rem;
+  margin-top: -5.15rem!important;
+}
+
+
+/* Page Styles */
+.articles {
+  section {
+    background:white;
+  }
+}
+
+
+
+
