--- a/app/assets/stylesheets/modules/large.css.scss
+++ b/app/assets/stylesheets/modules/large.css.scss
@@ -1,16 +1,50 @@
-.wrapper {
-  width: 1080px;
-  /* 1140px - 10% for margins */
-  margin: 0 auto;
-}
+// nav {
+//   position: absolute;
+//   top: 50%;
+//   right: 0;
+//   left: 0;
+//   height: 100%;
+//   margin-top: -1.025rem!important;
 
-.main {
-  article {
-    float: left;
-    width: 57%;
-  }
-  aside {
-    float: right;
-    width: 28%;
-  }
-}
+//   ul {
+//     margin: 0;
+//     padding: 0;
+//     list-style: none;
+//     float: right;
+//     li {
+//       float: left;
+//     }
+//   }
+
+//   a {
+//     padding:10px 20px;
+//     display: block;
+//     text-align: center;
+//     text-transform: uppercase;
+//     text-decoration: none;
+//     font-weight: normal;
+//     font-size:0.85em;
+//     color: $blue;
+//     border-radius: 25px;
+//     &:hover, &:visited {
+//       color: $blue;
+//     }
+//     &:hover {
+//       text-decoration: underline;
+//       background:$darkblue;
+//       color: white;
+//       border-radius: 25px;
+//       text-decoration: none;
+//     }
+//   }
+// }
+
+// img[rel="logo"] {
+//   position: absolute;
+//   top: 50%;
+//   right: 0;
+//   left: 0;
+//   height: 100%;
+//   width:10rem;
+//   margin-top: -5.15rem!important;
+// }
