--- a/app/assets/stylesheets/modules/small.css.scss
+++ b/app/assets/stylesheets/modules/small.css.scss
@@ -1,48 +1,86 @@
-/* Web Fonts @import */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800);
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
+// Place all the styles related to the Users controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
 
-.wrapper {
-  width: 90%;
-  margin: 0 5%;
+
+
+
+/* Global Styles */
+body, html {
+  background:$grey;
 }
-
-/* Colours */
 
 /* Basic typography */
-$heading-font-family: 'Open Sans', sans-serif;
-$body-font-family: 'Droid Serif', serif;
-$header-color: (62, 150, 219); /* font color in <header> */
+h1, h2, h3, h4, h5, h6 {
+  font-family: Roboto,arial,sans-serif;
+  color: $darkblue;
+}
+h2, h3, h4, h5, h6 {
+  font-family: Roboto,arial,sans-serif;
+  font-weight: normal;
+  color: $darkblue;
+}
 
 /* Header */
-@mixin header-h1 {
+h1 {
   //text-indent: -9999px; /*Uncomment this line if you're replacing the text with a logo. */
-  font: bold 3em/1 $heading-font-family;
-  color: $header-color;
-  letter-spacing: -2px;
   padding-right: .75em;
+  letter-spacing: -1px;
 }
 
-@mixin header-h4 {
-  font: italic 1.5em/1.25 $body-font-family;
+h4 {
+  font: italic 1.2em/1.25 'Droid Serif', serif;
   margin-bottom: 1em;
-  margin-top: -1em;
+  margin-top: -1.25em;
+  color: $blue;
 }
-
-@mixin typography-sample-h4 {
-  font: italic 1.5em/1.25 $body-font-family;
-  margin-bottom: .25em;
-  color: $heading-color;
-}
-
-
 
 
 header {
   position:relative;
   // background: #2e3639;
   background:white;
-  height:5rem;
+  height:6rem;
+  // box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
+  margin-bottom: 2em;
+}
+.article-excerpt {
+
+  h2 {
+    margin:0;
+  }
+
+  p {
+    color:#666;
+    letter-spacing: 0.5px;
+    line-height: 1.5em;
+  }
+
+  article {
+    @include column(8);
+    background:white;
+    border-bottom: 1px solid #efefef;
+    padding:1.5em;
+    margin:0!important;
+  }
+
+  aside {
+    @include column(4);
+  }
+
+  .image {
+    @include column(5); 
+    background:$grey;
+    height: 200px;
+    float: left;
+    display: inline-block;
+    margin:0;
+  }
+
+  .content {
+    @include column(7); 
+    float: right;
+  }
 }
 
 footer {
@@ -58,71 +96,40 @@ nav {
   right: 0;
   left: 0;
   height: 100%;
-  margin-top: -1.025rem!important;
-
+  margin-top: -3.025rem !important;
   ul {
     margin: 0;
     padding: 0;
     list-style: none;
     float: right;
+    height: 100%;
     li {
       float: left;
+      height: 100%;
     }
   }
 
   a {
-    padding:5px 20px;
+    height: 100%;
+    padding:2.25rem 35px 8px 35px;
     display: block;
     text-align: center;
+    text-transform: uppercase;
     text-decoration: none;
-    font-weight: bold;
-    color: #3e96db;
-    border-radius: 25px;
+    font-weight: normal;
+    font-size:0.85em;
+    color: $blue;
+    font-family:Roboto,arial,sans-serif;
     &:hover, &:visited {
-      color: #3e96db;
+      color: $blue;
     }
     &:hover {
       text-decoration: underline;
-      background:#4f5c7d;
+      background:$darkblue;
       color: white;
-      border-radius: 25px;
       text-decoration: none;
     }
   }
-}
-
-article {
-  h1 {
-    @include header-h1;
-  }
-  h4 {
-    @include header-h4;
-  }
-}
-
-.register-container {
-  background: #181c1d;
-  div ul {
-    list-style: none;
-    float: right;
-    margin: 0;
-    li {
-      float: left;
-      padding: 2px 0;
-      margin-bottom: 0;
-      a {
-        margin: 0 20px;
-        text-transform: uppercase;
-        color: white;
-        text-decoration: none;
-        font: 0.75rem Helvetica, Helvetica Neue, Arial;
-      }
-    }
-  }
-}
-
-li[rel="register"] {
-  background: #fd9458;
 }
 
 img[rel="logo"] {
@@ -131,9 +138,11 @@ img[rel="logo"] {
   right: 0;
   left: 0;
   height: 100%;
-  width:10rem;
-  margin-top: -4.15rem!important;
+  width:12rem;
+  margin-top: -3.25rem!important;
 }
+
+
 
 
 
