--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,12 +1,32 @@
+/* Web Fonts @import */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,800italic,400,800);
+@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100);
+
 html, button, input, select, textarea {
   color: #222;
 }
 
-body, html {
-  font: 1rem / 1.4 Helvetica, Helvetica Neue, Arial;
-  background:#f6f5f0;
+body, html, p, a {
+  font: 1rem / 1.4 normal 13px Roboto,arial,sans-serif;
 }
 
+.wrapper {
+  width:90%;
+  margin:0 5%;
+}
+
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
+/* Colours */
+$darkblue:rgb(28, 83, 121);
+$blue:rgb(0, 120, 164);
+$lightblue:rgb(166, 211, 235);
+$beige:rgb(246, 245, 240);
+$grey:#e5e5e5;
+$orange:rgb(229, 144, 26);
 
 a:hover {
   transition: all 0.5s ease-in-out;
@@ -119,6 +139,71 @@ textarea {
 
 
 
+
+
+
+
+
+
+
+a.menu-link {
+    float: right;
+    display: block;
+    padding: 1em;
+}
+nav[role=navigation] {
+  // padding-right:2em; 
+  clear: both;
+  -webkit-transition: all 0.3s ease-out;  
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+.js nav[role=navigation] {
+  overflow: hidden;
+  max-height: 0;
+}
+nav[role=navigation].active {
+  max-height: 15em;
+}
+nav[role=navigation] ul {
+  margin: 0;
+  padding: 0;
+  border-top: 1px solid #808080;
+}
+nav[role=navigation] li a {
+  display: block;
+  border-bottom: 1px solid #808080;
+}
+
+@media screen and (min-width: 48.25em) {
+  a.menu-link {
+     display: none;
+  }
+  .js nav[role=navigation] {
+    max-height: none;
+  }
+  nav[role=navigation] ul {
+    margin: 0 0 0 -0.25em;
+    border: 0;
+  }
+  
+  nav[role=navigation]  li {
+    display: inline-block;
+    margin: 0 0.25em;
+  }
+  nav[role=navigation] li a {
+    border: 0;
+  }
+}
+
+
+
+
+
+
+
 @media only screen and (max-width: 480px) {
 @import "modules/phone";
 }
@@ -127,7 +212,7 @@ textarea {
 @import "modules/small";
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 660px) {
 @import "modules/medium";
 }
 
