--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -11,6 +11,10 @@ body, html, p, a {
   font: 1rem / 1.4 normal 13px Roboto,arial,sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .wrapper {
   width:90%;
   margin:0 5%;
