--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -1,10 +1,13 @@
+/ %article
+/   .content
+/     = @articles.each do |article|
+/       %h2= link_to article.title, article
+
 %article
   .content
-    %h2
-      = article.title
-    %p
-      = article.body
-    / = link_to 'Show', article
+    %h2= link_to article.title, article
+    %p= article.body
     = link_to 'Edit', edit_article_path(article)
+    = link_to 'Show', article
     = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
-  .image
+  = link_to (image_tag("#")), article
