--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,6 +1,12 @@
 %section.article-excerpt
-  / %h1 Bruce McElroy's Design Blog
-  / %h4 rails is where it's at
-  / = link_to 'New Article', new_article_path
-  / %hr
-  = render @articles
+  = link_to 'New Article', new_article_path
+  %hr
+  - @articles.each do |article|
+    %article
+      .content
+        %h2= link_to article.title, article
+        %p= article.body
+        = link_to 'Edit', edit_article_path(article)
+        = link_to 'Show', article
+        = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+      = link_to (image_tag("#")), article
