--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -208,11 +208,13 @@ nav[role=navigation] li a {
 
 
 
-@media only screen and (max-width: 480px) {
+
+
+@media only screen and (max-width: 595px) {
 @import "modules/phone";
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 595px) {
 @import "modules/small";
 }
 
@@ -225,6 +227,66 @@ nav[role=navigation] li a {
 }
 
 
+@media screen and (max-width: 800px) {  
+  nav {  
+  height: 4.5em;  
+  font-size: 0.85em;  
+  border-bottom: 1px solid #efefef; 
+    a {
+      width: 7em;  
+      line-height: 4.5em; 
+
+    }
+    ul {   
+      height: 4.5em;
+    }
+}
+  img[rel="logo"] {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 1em;
+    height: 100%;
+    width:12rem;
+    margin-top: -2rem!important;
+  }
+}
+
+@media only screen and (max-width : 595px) {  
+    nav {  
+      width:100%;
+      border-bottom: 0; 
+      a {
+        width:100%!important;
+      } 
+      ul { 
+        width:100%;
+        display: none;
+        li {
+          width:25%!important;
+        }
+      }
+    }  
+    nav a#pull {  
+        display: block;  
+        background-color: #283744;  
+        width: 100%;  
+        position: relative;  
+    }  
+    nav a#pull:after {  
+        content:"";  
+        background: url('nav-icon.png') no-repeat;  
+        width: 25%;  
+        height: 30px;  
+        display: inline-block;  
+        position: absolute;  
+        right: 15px;  
+        top: 10px;  
+    }
+    img[rel="logo"] {
+      display: none;
+    }  
+} 
 
 
 
