--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,12 +1,15 @@
 %section.article-excerpt
-  = link_to 'New Article', new_article_path
-  %hr
+  / = link_to 'New Article', new_article_path
+  / %hr
   - @articles.each do |article|
     %article
       .content
         %h2= link_to article.title, article
         %p= article.body
-        = link_to 'Edit', edit_article_path(article)
-        = link_to 'Show', article
-        = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
-      = link_to (image_tag("#")), article
+        .meta
+          = link_to 'Read More...', article
+          .admin
+            = link_to 'Edit', edit_article_path(article)
+            = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
+      .image
+        = link_to (image_tag("img2.jpg")), article
