--- a/app/views/layouts/includes/_nav.html.haml
+++ b/app/views/layouts/includes/_nav.html.haml
@@ -1,7 +1,5 @@
-%header 
-  %a.menu-link{:href => "#menu"} Menu
-  %nav#menu.wrapper{:role => "navigation"}
-    = link_to(image_tag("logo.svg", :alt => "visualbam", :rel => "logo"), root_path)
+%header
+  %nav
     %ul
       %li
         %a{:href => "#"} Resume
@@ -11,3 +9,7 @@
         %a{:href => "#"} Blog
       %li
         %a{:href => "#"} Contact
+    %a#pull{:href => "#"} Menu
+    = link_to(image_tag("logo-simple.svg", :alt => "visualbam", :rel => "logo"), root_path)
+    .colorBar
+      &nbsp;
