--- a/app/assets/stylesheets/modules/small.css.scss
+++ b/app/assets/stylesheets/modules/small.css.scss
@@ -42,21 +42,23 @@ header {
 }
 
 nav {  
-  height: 5em;  
+  height: 5.5em;  
   width: 100%;  
   background: white;  
-  font-size: 0.85em;  
+  font-size: 0.75em;  
   position: relative;  
   border-bottom: 2px solid #efefef; 
   z-index: 15;
   a {
-    color: $lightblue;  
+    color: $blue;  
     display: inline-block;  
     width: 10em;  
     text-align: center;  
     text-decoration: none;  
-    line-height: 5em; 
+    line-height: 5.5em; 
     letter-spacing: 0.1em;
+    font-weight: bold;
+    text-transform: uppercase;
     &:hover, &:active {
       background-color: $lightblue;
       color:white;
@@ -66,12 +68,12 @@ nav {
     padding: 0; 
     margin: 0;
     float: right; 
-    height: 5em;
+    height: 5.5em;
     li {
       display: inline;  
       float: left;
       a {
-        border-left: 1px solid lighten($lightblue, 10%);  
+        border-left: 1px solid #efefef;  
         box-sizing:border-box;  
         -moz-box-sizing:border-box;  
         -webkit-box-sizing:border-box;
@@ -82,13 +84,29 @@ nav {
   #pull {display:none;} 
 }
 
+
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
 .colorBar {
+  opacity: 0;
   position:relative;
   left: -10px;
   width: 110%!important;
   margin-top: 0;
   z-index: 1;
+  
+  -webkit-animation:fadeIn 1s ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn 1s ease-in 1;
+  animation:fadeIn 1s ease-in 1;
+ 
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
 }
+
+
 
 .article-excerpt {
 
