--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -150,65 +150,6 @@ textarea {
 
 
 
-a.menu-link {
-    float: right;
-    display: block;
-    padding: 1em;
-}
-nav[role=navigation] {
-  // padding-right:2em; 
-  clear: both;
-  -webkit-transition: all 0.3s ease-out;  
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-}
-.js nav[role=navigation] {
-  overflow: hidden;
-  max-height: 0;
-}
-nav[role=navigation].active {
-  max-height: 15em;
-}
-nav[role=navigation] ul {
-  margin: 0;
-  padding: 0;
-  border-top: 1px solid #808080;
-}
-nav[role=navigation] li a {
-  display: block;
-  border-bottom: 1px solid #808080;
-}
-
-@media screen and (min-width: 48.25em) {
-  a.menu-link {
-     display: none;
-  }
-  .js nav[role=navigation] {
-    max-height: none;
-  }
-  nav[role=navigation] ul {
-    margin: 0 0 0 -0.25em;
-    border: 0;
-  }
-  
-  nav[role=navigation]  li {
-    display: inline-block;
-    margin: 0 0.25em;
-  }
-  nav[role=navigation] li a {
-    border: 0;
-  }
-}
-
-
-
-
-
-
-
-
 
 @media only screen and (max-width: 595px) {
 @import "modules/phone";
@@ -229,16 +170,16 @@ nav[role=navigation] li a {
 
 @media screen and (max-width: 800px) {  
   nav {  
-  height: 4.5em;  
-  font-size: 0.85em;  
+  height: 5em;  
+  font-size: 0.75em;  
   border-bottom: 1px solid #efefef; 
     a {
-      width: 7em;  
-      line-height: 4.5em; 
+      width: 8.25em;  
+      line-height: 5em; 
 
     }
     ul {   
-      height: 4.5em;
+      height: 5em;
     }
 }
   img[rel="logo"] {
@@ -264,6 +205,7 @@ nav[role=navigation] li a {
         display: none;
         li {
           width:25%!important;
+          &:hover {background-color:#8c99a4;}
         }
       }
     }  
@@ -285,6 +227,9 @@ nav[role=navigation] li a {
     }
     img[rel="logo"] {
       display: none;
+    }
+    .colorBar {
+      opacity: 1!important;
     }  
 } 
 
