--- a/app/views/layouts/includes/_nav.html.haml
+++ b/app/views/layouts/includes/_nav.html.haml
@@ -2,13 +2,13 @@
   %nav
     %ul
       %li
-        %a{:href => "#"} Resume
+        = link_to "Resume", resume_path
       %li
-        %a{:href => "#"} Portfolio
+        = link_to "Portfolio", portfolio_path
       %li
-        %a{:href => "#"} Blog
+        = link_to "Blog", articles_path
       %li
-        %a{:href => "#"} Contact
+        = link_to "Contact", contact_path
     %a#pull{:href => "#"} Menu
     = link_to(image_tag("logo-simple.svg", :alt => "visualbam", :rel => "logo"), root_path)
     .colorBar
