--- a/app/assets/stylesheets/modules/small.css.scss
+++ b/app/assets/stylesheets/modules/small.css.scss
@@ -92,8 +92,8 @@ nav {
 .colorBar {
   opacity: 0;
   position:relative;
-  left: -10px;
-  width: 110%!important;
+  // left: -10px;
+  width: 100%!important;
   margin-top: 0;
   z-index: 1;
   
