--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,1 +1,9 @@
-.h1 Home
+%article
+  %section
+    .content
+      %h1 Currently under construction!
+      %p My portfolio is now a work in progress rails app. Please do not mind all of the free space. Check back for updates! I'll be adding:
+      %ul
+        %li Personal Blog
+        %li Interface to upload portfolio projects
+        %li Dynamic resume fields integrated with linkedin
