--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,8 @@
 !!!
 %html
   %head
-    %title Portfolio
+    %title visualbam | Bruce McElroy | Portfolio
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    
     = csrf_meta_tags
   %body
     = render 'layouts/includes/nav'
