--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -7,3 +7,4 @@
         %li Personal Blog
         %li Interface to upload portfolio projects
         %li Dynamic resume fields integrated with linkedin
+      %p.signup <a href="mailto:bruce.mcelroy@gmail.com"> Please email for questions </a>
