--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,44 +1,79 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@import "globals/all";
+@import "compass/css3";
 
-/* Global Styles */
-body, html {
-  background:$grey;
+.wrapper {
+  width:90%;
+  margin:0 5%;
 }
 
-/* Basic typography */
-h1, h2, h3, h4, h5, h6, a {
-  font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  letter-spacing: 0.05em;
-  color: #3b4249;
-}
-h2, h3, h4, h5, h6 {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-weight: normal;
-  color: #3b4249;
+.email {
+  background:$blue;
+  padding:2em;
+  width: auto;
 }
 
-/* Header */
-h1 {
-  //text-indent: -9999px; /*Uncomment this line if you're replacing the text with a logo. */
-  padding-right: .75em;
-  letter-spacing: -1px;
+.chromeframe {
+  margin: 0.2rem 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
 }
 
-h4 {
-  font: italic 1.2em/1.25 'Droid Serif', serif;
-  margin-bottom: 1em;
+
+@media only screen and (max-width: 595px) {
+nav {  
+  width: 100%;  
+  background: #455868;  
+  font-size: 11pt;  
+  font-weight: bold;  
+  position: relative;
+  ul {  
+    padding: 0;  
+    margin: 0 auto;  
+    height: 5em;  
+  }
+  li {  
+    display: inline;  
+    float: left;  
+    a {  
+      border-right: 1px solid #576979;  
+      box-sizing:border-box;  
+      -moz-box-sizing:border-box;  
+      -webkit-box-sizing:border-box;
+      &:last-child a {border-right:0;}  
+    }  
+  }  
+  a {  
+    color: #fff;  
+    display: inline-block;  
+    width: 100px;  
+    text-align: center;  
+    text-decoration: none;  
+    line-height: 40px;  
+    text-shadow: 1px 1px 0px #283744;
+    a:hover, nav a:active {  
+      background-color: #8c99a4;  
+    }
+    #pull {  
+      display: none;  
+    }    
+  }
+}  
+
+.colorBar {
   margin-top: -1.25em;
-  color: $blue;
+}
 }
 
+@media only screen and (min-width: 595px) {
+body, html {
+  background:#444;
+}
 
 header {
   position:relative;
   z-index: 5;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.05);
-  margin-bottom: 4em;
 }
 
 nav {  
@@ -84,11 +119,6 @@ nav {
   #pull {display:none;} 
 }
 
-
-
-
-
-
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@@ -111,20 +141,15 @@ nav {
 }
 
 
-  section {
-    @include column(12);
-    background:white;
-    border-bottom: 1px solid #efefef;
-    padding:1.5em;
-    margin:0!important;
-  }
-
-
-
-
-
+section {
+  background:white;
+  border-bottom: 1px solid #efefef;
+  padding:1.5em;
+  margin:0!important;
+}
 
 .portfolio-page {
+  section { background:$grey; }
   .thumbnail {
     @include column(4);
     overflow: hidden;
@@ -136,29 +161,28 @@ nav {
       &:hover { -webkit-transform: scale(1.1); }
     }
   }
+  .content {
+    @include column(12); 
+    float: right;
+    padding:1em 0 0 0;
+    .admin {display:none;}
+    p {
+      max-height: 6em;
+      overflow: hidden;
+    }
+  }
 }
-
-
-
-
 
 .article-page {
 
   h2 {
-    margin:0;
+    margin:0 0 0.25em 0;
     a {
-      font-weight: light;
-      &:hover {
-        color:$lightblue;
-      }
+      &:hover { color:$lightblue;}
     }
   }
 
-  p {
-    color:#777!important;
-    letter-spacing: 0.5px;
-    line-height: 1.5em; font-weight:100;
-  }
+  p { color:#777!important;}
 
   article {
     @include column(8);
@@ -167,13 +191,7 @@ nav {
     padding:1.5em;
     margin:0!important;
   }
-  section {
-    @include column(12);
-    background:white;
-    border-bottom: 1px solid #efefef;
-    padding:0!important;
-    margin:0!important;
-  }
+
 
   aside {
     @include column(4);
@@ -206,12 +224,6 @@ nav {
   }
 }
 
-footer {
-  margin-top: 2em;
-  padding:20px 0;
-  color: white;
-  // background:rgb(46,54,57);
-}
 
 img[rel="logo"] {
   position: absolute;
@@ -389,6 +401,160 @@ Calling the Mixin for the different buttons
 .fb      { @include button($fb-blue, 'fb', left); }
 .twitter { @include button($twitter-blue, 'twitter', left); }
 .power { @include button($yellow, 'bolt', right); }
+}
+
+
+
+@media screen and (max-width: 800px) {  
+  nav {  
+  height: 5em;  
+  font-size: 0.75em;  
+  border-bottom: 1px solid #efefef; 
+    a {
+      width: 8.25em;  
+      line-height: 5em; 
+
+    }
+    ul {   
+      height: 5em;
+    }
+}
+  img[rel="logo"] {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 1em;
+    height: 100%;
+    width:12rem;
+    margin-top: -2rem!important;
+  }
+}
+
+@media only screen and (max-width : 595px) {  
+    nav {  
+      width:100%;
+      border-bottom: 0; 
+      a {
+        width:100%!important;
+      } 
+      ul { 
+        width:100%;
+        display: none;
+        li {
+          width:25%!important;
+          &:hover {background-color:#8c99a4;}
+        }
+      }
+    }  
+    nav a#pull {  
+        display: block;  
+        background-color: #283744;  
+        width: 100%;  
+        position: relative;  
+    }  
+    nav a#pull:after {  
+        content:"";  
+        background: url('nav-icon.png') no-repeat;  
+        width: 25%;  
+        height: 30px;  
+        display: inline-block;  
+        position: absolute;  
+        right: 15px;  
+        top: 10px;  
+    }
+    img[rel="logo"] {
+      display: none;
+    }
+    .colorBar {
+      opacity: 1!important;
+    }  
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ==========================================================================
+   Print styles
+   ========================================================================== */
+
+@media print {
+  * {
+    background: transparent !important;
+    color: #000 !important;
+    /* Black prints faster: h5bp.com/s */
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+  a {
+    text-decoration: underline;
+    &:visited {
+      text-decoration: underline;
+    }
+    &[href]:after {
+      content: " (" attr(href) ")";
+    }
+  }
+  abbr[title]:after {
+    content: " (" attr(title) ")";
+  }
+  /*
+   * Don't show links for images, or javascript/internal links
+   */
+  .ir a:after {
+    content: "";
+  }
+  a {
+    &[href^="javascript:"]:after, &[href^="#"]:after {
+      content: "";
+    }
+  }
+  pre, blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+  thead {
+    display: table-header-group;
+    /* h5bp.com/t */
+  }
+  tr {
+    page-break-inside: avoid;
+  }
+  img {
+    page-break-inside: avoid;
+    max-width: 100% !important;
+  }
+  @page {
+    margin: 0.5cm;
+  }
+
+  p, h2, h3 {
+    orphans: 3;
+    widows: 3;
+  }
+  h2, h3 {
+    page-break-after: avoid;
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
