--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -1,20 +1,21 @@
 .portfolio-page
-  .content
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
-    .thumbnail
-      = link_to (image_tag("img2.jpg"))
+  %section.clearfix
+    .content
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("img2.jpg"))
