--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -2,20 +2,26 @@
   %section.clearfix
     .content
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img1.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img2.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img3.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img4.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img5.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img6.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img7.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img8.jpg"))
       .thumbnail
-        = link_to (image_tag("img2.jpg"))
+        = link_to (image_tag("portfolio/img9.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img10.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img11.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img12.jpg"))
