--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -257,7 +257,7 @@ img[rel="logo"] {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(spinner.gif) 50% 50% no-repeat #000000;
+  background: url("/assets/spinner.gif") 50% 50% no-repeat #000000;
 }
 
 
