--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -9,7 +9,7 @@
             %h2= link_to article.title, article
             %p= article.body
             .meta
-              = link_to 'Read More...', article
+              = link_to 'Read More...'
               .admin
                 = link_to 'Edit', edit_article_path(article)
                 = link_to 'Destroy', article, :confirm => 'Are you sure?', :method => :delete
