--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -1,5 +1,10 @@
 .portfolio-page
-  %section.clearfix
+  %section#about.clearfix
+    .content
+      %h1 Hello there,
+      %h3.subheader 
+        I am Bruce McElroy. Positive Thinker, UI/UX Junkie, Designer, and Dog Lover. I do what I do because I love making people happy. While you're here browse my blog or view my Instagram shots. And if nothing else go get inspired.
+  %section#portfolio.clearfix
     .content
       .thumbnail
         = link_to (image_tag("portfolio/img1.jpg"))
@@ -25,3 +30,21 @@
         = link_to (image_tag("portfolio/img11.jpg"))
       .thumbnail
         = link_to (image_tag("portfolio/img12.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img13.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img14.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img15.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img16.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img17.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img18.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img19.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img20.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img21.jpg"))
