--- a/app/views/layouts/includes/_nav.html.haml
+++ b/app/views/layouts/includes/_nav.html.haml
@@ -4,11 +4,11 @@
       %li
         = link_to "Resume", resume_path
       %li
-        = link_to "Portfolio", portfolio_path
+        = link_to "Work", portfolio_path
       %li
         = link_to "Blog", articles_path
       %li
-        = link_to "Contact", contact_path
+        = link_to "Connect", contact_path
     %a#pull{:href => "#"} Menu
     = link_to(image_tag("logo-simple.svg", :alt => "visualbam", :rel => "logo"), root_path)
     .colorBar
