--- a/app/views/static_pages/portfolio.html.haml
+++ b/app/views/static_pages/portfolio.html.haml
@@ -8,46 +8,45 @@
         or view my <a href="http://instagram.com/visualbam" target="_blank"> Instagram shots.</a> And if nothing else, go get inspired.
   %section#portfolio.clearfix
     .content
-      %ul
-        %li
-          %figure= link_to (image_tag("portfolio/img1.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img2.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img3.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img4.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img5.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img6.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img7.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img8.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img9.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img10.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img11.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img12.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img13.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img14.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img15.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img16.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img17.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img18.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img19.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img20.jpg"))
-        %li
-          %figure= link_to (image_tag("portfolio/img21.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img1.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img2.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img3.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img4.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img5.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img6.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img7.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img8.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img9.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img10.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img11.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img12.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img13.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img14.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img15.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img16.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img17.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img18.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img19.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img20.jpg"))
+      .thumbnail
+        = link_to (image_tag("portfolio/img21.jpg"))
