--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,8 @@
 %html
   %head
     %meta{:name => 'viewport', :content => "width=device-width, initial-scale=1.0, maximum-scale=1.0" }
-    %title visualbam | Bruce McElroy | Portfolio
+    %meta{:name => 'description', :content => "Bruce McElroy is a Front End Web Designer located in Pittsburgh, PA." }
+    %title Bruce McElroy | Front End Web Designer - Pittsburgh
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
