--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,11 +1,10 @@
-.home-page
-  %section.clearfix
-    .wrapper
-      .content
-        %h1 Currently under construction!
-        %h4.subheader My portfolio is now a work in progress rails app. Please do not mind all of the free space. Check back for updates! I'll be adding:
-        %ul
-          %li Personal Blog
-          %li Interface to upload portfolio projects
-          %li Dynamic resume fields integrated with linkedin
-        %p.signup <a href="mailto:bruce.mcelroy@gmail.com"> Please email for questions </a>
+#homepage
+  %section#main
+    .row
+      %h1 Currently under construction!
+      %h4.subheader My portfolio is now a work in progress rails app. Please do not mind all of the free space. Check back for updates! I'll be adding:
+      %ul
+        %li Personal Blog
+        %li Interface to upload portfolio projects
+        %li Dynamic resume fields integrated with linkedin
+      %p.signup <a href="mailto:bruce.mcelroy@gmail.com"> Please email for questions </a>
