--- a/app/views/static_pages/resume.html.haml
+++ b/app/views/static_pages/resume.html.haml
@@ -1,1 +1,51 @@
-.h1 Resume
+#resumepage
+  %section#summary
+    .row
+      %h1 Summary
+      %p
+        I am a front end designer/developer by day... and a front end designer/developer by night. My profession is my passion and way of life. I do not consider what I do a job as after the usual 9-5 I continue to work on personal projects in my spare time. I strive to be challenged and am very self motivated. I am currently learning Ruby on Rails and have experience in most current frameworks including bootstrap, foundation and the semantic grid system. I feel obligated to stay up-to-date on ALL of the latest design and development trends on the internet to effectively keep my projects fresh and future proof. My goal is to be an asset to your company and wear multiple hats and help streamline projects.
+  %section#experience
+    .row
+      %h1 Experience
+      .job
+        %h5 Web Designer / UI UX
+        %h6 PPG Industries
+        %p August 2012 – Present (1 year 1 month) | Greater Pittsburgh Area
+        %ul
+          %li Update and maintain corporate websites while maintaining brand/identity consistency
+          %li Web development using Visualstudio in a .NET/Azure environment
+          %li Email marketing, design and development (responsive)
+          %li Project management using Sharepoint (currently transitioning to atTask)
+      .job
+        %h5 Front End Designer/Developer
+        %h6 Machovy.com
+        %p August 2012 – Present (1 year 1 month) | Pittsburgh PA
+        %ul
+          %li Brand Development and identity
+          %li Website traffic growth and marketing
+          %li Wireframe and content
+          %li Website UI/Design
+      .job
+        %h5 Graphic/Web Designer
+        %h6 Kolano Design
+        %p August 2011 – August 2012 (1 year 1 month)Greater | Pittsburgh Area
+        %ul
+          %li Designed print material: Billboards, Magazine Ads, Collateral, direct mailers and Newsletters
+          %li Wordpress website development / technical support
+          %li Signage Design
+          %li Photography
+      .job
+        %h5 Graphic Design Intern
+        %h6 Whirl Magazine
+        %p April 2011 – July 2011 (4 months) | Pittsburgh Area
+        %ul
+          %li Designed magazine ads and 16 page spread for Pittsburgh's 50 Finest event
+          %li Maintained WHIRL.com articles via wordpress
+      .job
+        %h5 Visual Communications Assistant
+        %h6 Pittsburgh Technical Institute
+        %p March 2010 – July 2011 (1 year 5 months) | Oakdale PA
+        %ul
+          %li Designed posters, displays and signage for student activities
+          %li Created certificates, produced event directories and photographed school events
+
