--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,23 +1,20 @@
 !!!
 %html
   %head
-    %meta{:name => 'viewport', :content => "width=device-width, initial-scale=1.0, maximum-scale=1.0" }
-    %meta{:name => 'description', :content => "Bruce McElroy is a Front End Web Designer located in Pittsburgh, PA." }
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0, maximum-scale=1.0" }
+    %meta{:name => "description", :content => "Bruce McElroy is a Front End Web Designer located in Pittsburgh, PA." }
     %title Bruce McElroy | Front End Web Designer - Pittsburgh
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
-    :javascript
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-33865271-1']);
-      _gaq.push(['_setDomainName', 'visualbam.com']);
-      _gaq.push(['_setAllowLinker', true]);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+    - if Rails.env.production?
+      :javascript
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      
+        ga('create', '#{GOOGLE_TA}', 'perk.es');
+        ga('send', 'pageview');
   %body
     = render 'layouts/includes/nav'
     .main-container
